--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -42,7 +42,7 @@
 .radio
   cursor: pointer
   display: inline-block
-  line-height: 16px
+  line-height: 1em
   position: relative
   vertical-align: top
   input
@@ -57,11 +57,11 @@
 
 .radio
   & + .radio
-    margin-left: 10px
+    margin-left: 0.5em
 
 .select
   display: inline-block
-  height: 32px
+  height: 2.5em
   position: relative
   vertical-align: top
   select
@@ -69,7 +69,7 @@
     cursor: pointer
     display: block
     outline: none
-    padding-right: 36px
+    padding-right: 2.5em
     &:hover
       border-color: $control-hover-border
     &::ms-expand
@@ -80,34 +80,19 @@
       width: 100%
   &:after
     +arrow($control-active)
-    margin-top: -6px
+    margin-top: -4px
     right: 16px
     top: 50%
   &:hover
     &:after
       border-color: $control-hover
-  &.is-small
-    height: 24px
-    select
-      +control-small
-      padding-right: 28px
-  &.is-medium
-    height: 40px
-    select
-      +control-medium
-      padding-right: 44px
-  &.is-large
-    height: 48px
-    select
-      +control-large
-      padding-right: 52px
 
 .label
   color: $control
   display: block
   font-weight: bold
   &:not(:last-child)
-    margin-bottom: 5px
+    margin-bottom: 0.5em
 
 .help
   display: block
@@ -122,13 +107,13 @@
 
 .control-label
   +mobile
-    margin-bottom: 5px
+    margin-bottom: 0.5em
   +tablet
     flex-basis: 0
     flex-grow: 1
     flex-shrink: 0
-    margin-right: 20px
-    padding-top: 7px
+    margin-right: 1.5em
+    padding-top: 0.5em
     text-align: right
 
 .control
