--- a/sass/elements/other.sass
+++ b/sass/elements/other.sass
@@ -43,8 +43,7 @@
 
 .highlight
   +block
-  font-size: 12px
-  font-weight: normal
+  font-weight: $weight-normal
   max-width: 100%
   overflow: hidden
   padding: 0
