--- a/sass/utilities/controls.sass
+++ b/sass/utilities/controls.sass
@@ -28,14 +28,15 @@ $control-icon-active: $grey-light !default
   background-color: $control-background
   border: 1px solid $control-border
   border-radius: $control-radius
+  box-shadow: none
   color: $control
   display: inline-flex
   font-size: $control-size
-  height: 32px
+  height: 2.5em
   justify-content: flex-start
-  line-height: 24px
-  padding-left: 8px
-  padding-right: 8px
+  line-height: 1.5
+  padding-left: 0.75em
+  padding-right: 0.75em
   position: relative
   vertical-align: top
   &:hover
@@ -56,20 +57,8 @@ $control-icon-active: $grey-light !default
 
 =control-small
   border-radius: $control-radius-small
-  font-size: 11px
-  height: 24px
-  line-height: 16px
-  padding-left: 6px
-  padding-right: 6px
+  font-size: $size-small
 =control-medium
-  font-size: 18px
-  height: 40px
-  line-height: 32px
-  padding-left: 10px
-  padding-right: 10px
+  font-size: $size-medium
 =control-large
-  font-size: 24px
-  height: 48px
-  line-height: 40px
-  padding-left: 12px
-  padding-right: 12px
+  font-size: $size-large
