--- a/sass/utilities/variables.sass
+++ b/sass/utilities/variables.sass
@@ -29,14 +29,14 @@ $red:          hsl(348, 100%, 61%) !default
 $family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default
 $family-monospace: "Inconsolata", "Consolas", "Monaco", monospace !default
 
-$size-1: 48px !default
-$size-2: 40px !default
-$size-3: 28px !default
-$size-4: 24px !default
-$size-5: 18px !default
-$size-6: 14px !default
+$size-1: 3.5rem !default
+$size-2: 2.5rem !default
+$size-3: 1.75rem !default
+$size-4: 1.5rem !default
+$size-5: 1.25rem !default
+$size-6: 16px !default
 
-$size-7: 11px !default
+$size-7: 0.875rem !default
 
 $weight-normal: 400 !default
 $weight-bold: 700 !default
@@ -70,12 +70,10 @@ $dark: $grey-darker !default
 
 // Invert colors
 $primary-invert: findColorInvert($primary) !default
-
 $info-invert: findColorInvert($info) !default
 $success-invert: findColorInvert($success) !default
 $warning-invert: findColorInvert($warning) !default
 $danger-invert: findColorInvert($danger) !default
-
 $light-invert: $dark !default
 $dark-invert: $light !default
 
@@ -119,8 +117,7 @@ $family-code: $family-monospace !default
 $size-small: $size-7 !default
 $size-normal: $size-6 !default
 $size-medium: $size-5 !default
-$size-large: $size-3 !default
-$size-huge: $size-1 !default
+$size-large: $size-4 !default
 
 ////////////////////////////////////////////////
 ////////////////////////////////////////////////
