--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -4,11 +4,11 @@
   border-top: 0
   content: " "
   display: block
-  height: 7px
+  height: 0.5em
   pointer-events: none
   position: absolute
   transform: rotate(-45deg)
-  width: 7px
+  width: 0.5em
 
 =block
   &:not(:last-child)
@@ -133,9 +133,9 @@
   border-top-color: transparent
   content: ""
   display: block
-  height: 16px
+  height: 1rem
   position: relative
-  width: 16px
+  width: 1rem
 
 =overlay($offset: 0)
   bottom: $offset
