--- a/sass/utilities/variables.sass
+++ b/sass/utilities/variables.sass
@@ -104,11 +104,13 @@ $link-invert: $primary-invert !default
 $link-visited: $purple !default
 
 $link-hover: $grey-darker !default
-$link-hover-background: $white-ter !default
-$link-hover-border: $grey-darker !default
+$link-hover-border: $grey-light !default
+
+$link-focus: $grey-darker !default
+$link-focus-border: $primary !default
 
 $link-active: $grey-darker !default
-$link-active-border: $grey-darker !default
+$link-active-border: $grey-dark !default
 
 // Typography
 $family-primary: $family-sans-serif !default
