Add nav modifer is-fixed-top and html modifer has-fixed-nav

--- a/sass/components/nav.sass
+++ b/sass/components/nav.sass
@@ -131,6 +131,13 @@ a.nav-item
   // Modifiers
   &.has-shadow
     box-shadow: 0 2px 3px rgba($black, 0.1)
+  &.is-fixed-top
+    position: fixed
+    left: 0
+    right: 0
+    top: 0
+    +mobile
+      position: static
   // Responsiveness
   +touch
     & > .container,
@@ -138,3 +145,8 @@ a.nav-item
       & > .nav-left
         & > .nav-item.is-brand:first-child
           padding-left: 20px
+
+.has-fixed-nav
+  padding-top: $nav-height
+  +mobile
+    padding-top: 0
