Run npm build and docs scripts

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -3245,7 +3245,6 @@ a.box:active {
 .level {
   -webkit-box-align: center;
       -ms-flex-align: center;
-              -ms-grid-row-align: center;
           align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -3759,7 +3758,6 @@ a.box:active {
   top: 0;
   -webkit-box-align: center;
       -ms-flex-align: center;
-              -ms-grid-row-align: center;
           align-items: center;
   display: none;
   -webkit-box-pack: center;
@@ -4060,10 +4058,33 @@ a.nav-item.is-tab.is-active {
   box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1);
 }
 
+.nav.is-fixed-top {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+}
+
+@media screen and (max-width: 768px) {
+  .nav.is-fixed-top {
+    position: static;
+  }
+}
+
 @media screen and (max-width: 979px) {
   .nav > .container > .nav-left > .nav-item.is-brand:first-child,
   .container > .nav > .nav-left > .nav-item.is-brand:first-child {
     padding-left: 20px;
+  }
+}
+
+.has-fixed-nav {
+  padding-top: 50px;
+}
+
+@media screen and (max-width: 768px) {
+  .has-fixed-nav {
+    padding-top: 0;
   }
 }
 
@@ -5396,7 +5417,6 @@ a.panel-block:hover {
 .columns.is-vcentered {
   -webkit-box-align: center;
       -ms-flex-align: center;
-              -ms-grid-row-align: center;
           align-items: center;
 }
 
@@ -5419,7 +5439,6 @@ a.panel-block:hover {
 .tile {
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
-              -ms-grid-row-align: stretch;
           align-items: stretch;
   display: block;
   -ms-flex-preferred-size: auto;
@@ -7123,7 +7142,6 @@ html.route-index #carbon {
 .structure-item.is-structure-container:after {
   -webkit-box-align: start;
       -ms-flex-align: start;
-              -ms-grid-row-align: flex-start;
           align-items: flex-start;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
